syntax = "proto3";

package customer;

import "google/protobuf/timestamp.proto";

option go_package= "./customer";

service CustomerService{
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc GetCustomers(GetCustomersRequest) returns (GetCustomersResponse);
  rpc GetCustomersByMonths(GetCustomersByMonthsRequest) returns (GetCustomersByMonthsResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
}

message CreateCustomerRequest{
  int64 companyId = 1;
  string firstName = 2;
  optional string lastName = 3;
  optional string email = 4;
  optional string phone = 5;
  string identificationNumber = 6;
  string identificationType = 7;
}

message CreateCustomerResponse{
  int64 id = 1;
  int64 status = 2;
  string error = 3;
}

message GetCustomerRequest{
  int64 id = 1;
}

message GetCustomerResponse{
  int64 id = 1;
  int64 companyId = 2;
  string firstName = 3;
  optional string lastName = 4;
  optional string email = 5;
  optional string phone = 6;
  string identificationNumber = 7;
  string identificationType = 8;
  int64 status = 9;
  string error = 10;
}

message GetCustomersRequest{
  int64 companyId = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  optional string identificationNumber = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetCustomersResponse{
  repeated GetCustomerResponse customers = 1;
  int64 status = 2;
  string error = 3;
}

message GetCustomersByMonthsRequest{
  int64 companyId = 1;
  int32 months = 2;
}

message GetCustomersByMonthsResponse{
	repeated google.protobuf.Timestamp createdAt = 1;
  int64 status = 2;
  string error = 3;
}

message UpdateCustomerRequest{
  int64 id = 1;
  string firstName = 2;
  optional string lastName = 3;
  optional string email = 4;
  optional string phone = 5;
  string identificationNumber = 6;
  string identificationType = 7;
}

message UpdateCustomerResponse{
  int64 status = 1;
  string error = 2;
}

message DeleteCustomerRequest{
  int64 id = 1;
}

message DeleteCustomerResponse{
  int64 status = 1;
  string error = 2;
}
