syntax = "proto3";

package file;

option go_package= "./file";

service FileService{
  rpc UploadFiles(UploadFilesRequest) returns (UploadFilesResponse);
  rpc DeleteFiles(DeleteFilesRequest) returns (DeleteFilesResponse);
}

message UploadFilesRequest{
  string bucketName = 1;
  string folderName = 2;
  repeated FileData files = 3;
}

message FileData {
    string fileName = 1;
    bytes fileData = 2;
}

message UploadFilesResponse{
  repeated string fileUrls = 1;
  int64 status = 2;
  string error = 3;
}

message DeleteFilesRequest{
  string bucketName = 1;
  string folderName = 2;
  repeated string fileNames = 3;
}

message DeleteFilesResponse{
  int64 status = 1;
  string error = 2;
}